# CodeMapper

./: .gitignore  Dockerfile  LoadPreComputedResults.py  README.md  pyproject.toml  requirements.txt
data/: python_repos.txt  source_repos.txt  source_repos_java.txt
data/annotation/: annotation_b_100.json  annotations_100.json  block_test.json  block_training.json  method_test.json  method_training.json  variable_test.json  variable_training.json
data/oracle/: ORACLE.md  change_maps.json  change_maps_reversed.json
data/suppression_data/: idx_mappings_wo_unchanges.csv
jparser/: BlockLocator.java  DataExtractionBlock.py  DataExtractionMethod.py  DataExtractionVariable.py  MethodLocator.java  VariableDeclarationLocator.java
jparser/jparser/: JavaAttributeParser.java  JavaBlockParser.java  JavaClassParser.java  JavaMethodParser.java  JavaVariableParser.java
src/anything_tracker/: AnythingTracker.py  AnythingTrackerOnHistoryPairs.py  AnythingTrackerUtils.py  CandidateRegion.py  CharacterRange.py  CommmonFunctions.py  CommonFunctions.py  ComputeCandidateHunks.py  ComputeCandidateRegions.py  ComputeSimilarityScores.py  ComputeTargetRegion.py  ComputeTargetRegionWithContext.py  DetectMovement.py  DiffHunk.py  DownloadModel.py  ELementCategory.py  EmbeddingSimilarityAssignment.py  FineGrainLineCharacterIndices.py  GetDiffResults.py  GetSingleLineMaps.py  GetTargetFilePath.py  GitDiffToCandidateRegion.py  GitDiffToTargetChangedHunk.py  Hunk.py  HunkMap.py  HunkPair.py  Line.py  LineMap.py  OneRoundTimeInfo.py  RecordExecutionTimes.py  SearchLinesToCandidateRegion.py  (+2 more)
(+531 files in other folders)
