[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anything_tracker"
version = "1.0.0"
description = ""
authors = [
  { name = "Huimin Hu", email = "huhuimin236@gmail.com" },
  { name = "Michael Pradel", email = "michael@binaervarianz.de" },
]
license = "MIT"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = [
    "src/anything_tracker",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]